scrollbar fix?

--- a/assets/styles/base/_base.sass
+++ b/assets/styles/base/_base.sass
@@ -1,9 +1,8 @@
-html
-  overflow-x: hidden
-
 html,
 body
   font-family: $sans-serif
+  overflow-x: hidden
+  overflow-y: visible
 
 body
   &.is-nav-opened
